@@ -3,8 +3,8 @@ package com.sprint.mission.discodeit.mapper;
 import com.sprint.mission.discodeit.dto.binaryContent.BinaryContentDto;
 import com.sprint.mission.discodeit.dto.message.MessageDto;
 import com.sprint.mission.discodeit.entity.Message;
+import com.sprint.mission.discodeit.storage.BinaryContentStorage;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
@@ -14,6 +14,7 @@ public class MessageMapper {
 
   private final BinaryContentMapper binaryContentMapper;
   private final UserMapper userMapper;
+  private final BinaryContentStorage binaryContentStorage;
 
   public MessageDto toDto(Message message) {
     return new MessageDto(
@@ -29,8 +30,8 @@ public class MessageMapper {
 
   private List<BinaryContentDto> attachments(Message message) {
     return message.getAttachments().stream()
-        .map(binaryContentMapper::toDto)
-        .collect(Collectors.toList());
+        .map(binaryContent -> binaryContentMapper.toDto(binaryContent,
+            binaryContentStorage.get(binaryContent.getId())))
+        .toList();
   }
-
 }
